# AI

./: .gitignore
DL/Word2Vec_scrach/: app.py  controller.py  main.py  pyproject.toml
DL/Word2Vec_scrach/training/: model_training.ipynb
GenAI/Langchain/: README.MD
GenAI/Langchain_uv_demo/: main.py  pyproject.toml
GenAI/Langchain_uv_demo/CH-/: 1_tools.ipynb  5_conditional_chain_test.ipynb
GenAI/Langchain_uv_demo/CH-1/: 1_LLM_calls.ipynb  2_Messages.ipynb  3_structured_output.ipynb
GenAI/Langchain_uv_demo/CH-2/: 1_chains.ipynb  2_Runnable_lambda.ipynb  3_Parallel_Chain.ipynb  4_Conditional_chain.ipynb
LangGraph/: core.ipynb  pyproject.toml  requirements.txt  sample.ipynb
Log Classification/: classified_logs.csv  main.py  pyproject.toml
Log Classification/resources/: logs_with_labels.csv  security_alert_content.html
Log Classification/service/: clasify_logs.py  email_notifier.py  llm_processor.py  model_processor.py
Log Classification/training/: training_model.ipynb
MCP_Tutorial/: pyproject.toml  test.py  weather.py
Projects/Log Classification/: README.md  testdata.csv
Projects/Log Classification/service/: regx_processor.py
Projects/Log Classification/training/: log_classifier.joblib
RAG/Hybrid_search/: 1.2_RAG_Hybrid_Search.ipynb  README.md  bm25_encoder_value.json  pyproject.toml
RAG/Tutorial/: 1.0_RAG_with_own_text.ipynb  1.1_RAG_Document_Loaders.ipynb  pyproject.toml  requirments.txt
RAG/Tutorial/fastapi/: add_routes_app.py  client.py
RAG/customer_support_system/: CODE_EXAMPLES.md  LINKEDIN_POST.md  README.md  controller.py  evaluate.py  pyproject.toml  streamlit_app.py
RAG/customer_support_system/service/: bm25.pkl  documents.pkl  evaluation.py  hybridsearch.py  llm.py  rag_building.ipynb
Sentiment Analysis movie Review/: README.md
Software Development Agent/: README.md  main.py  pyproject.toml  requirements.txt
Software Development Agent/agents/: analyzer.py  developer.py  planer.py
Software Development Agent/graph/: builder.py  llm.py  state.py
Travel Planner - Multi Agent System/: README.md  app.py  backend.py  eval_results.json  eval_runner.py  launch.json  pyproject.toml  requirements.txt  test.py
Travel Planner - Multi Agent System/agents/: agent.py  state.py
Travel Planner - Multi Agent System/tests/: test_guardrails.py
Travel Planner - Multi Agent System/tools/: flilght_tool.py  tavily_tool.py
