[project]
name = "langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.137.2",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.10,<2.0.0",
    "langchain-core>=1.4.7,<2.0.0",
    "langchain-openai>=1.3.3,<2.0.0",
    "langgraph>=1.2.5,<1.3.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-prebuilt>=1.1.0,<2.0.0",
    "langgraph-sdk>=0.4.2,<0.5.0",
    "langsmith>=0.9.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "uvicorn>=0.49.0",
]
