[project]
name = "log-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.8.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "scikit-learn",
    "sentence-transformers>=5.3.0",
    "tf-keras>=2.21.0",
    "seaborn>=0.13.2",
    "groq>=1.1.2",
    "dotenv>=0.9.9",
    "sendgrid>=6.12.5",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "python-multipart>=0.0.26",
]
