[project]
name = "word2vec-scrach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "gensim>=4.4.0",
    "ipykernel>=7.3.0",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "streamlit>=1.58.0",
    "unicorn>=2.1.4",
]
