[project]
name = "hybrid-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "pinecone>=9.0.1",
    "pinecone-text>=0.11.0",
    "sentence-transformers>=5.5.1",
]
