[project]
name = "tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langserve>=0.3.3",
    "sse-starlette>=3.3.4",
    "uvicorn>=0.42.0",
]
