[project]
name = "customer-support-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "ipykernel>=7.2.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pinecone>=9.1.0",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
